[package]
name = "embedded-bacnet"
authors = ["David Haig"]
version = "0.3.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/ninjasource/embedded-bacnet.git"
description = "A bacnet library for embedded systems (no_std)"
keywords = ["bacnet", "embedded", "no_std"]
categories = ["embedded", "no-std", "network-programming"]
readme = "README.md"

[dependencies]
log = { version = "0.4.19", default-features = false }
defmt = { version = "0.3.5", optional = true }
serde = { version = "1.0", default-features = false, features = [
    "derive",
], optional = true }

# TODO: add this when it reaches 1.0
# derive_more = { version = "^1.0.0-beta.6", default-features = false, features = [ "try_from"] }

[dev-dependencies]
simple_logger = "4.2.0"
chrono = { version = "0.4.28" }
clap = { version = "4.5.4", features = ["derive"] }
tokio = { version = "1.38.0", features = ["rt-multi-thread", "net", "macros"] }

[features]
default = []
defmt = ["dep:defmt"]
serde = ["dep:serde"]
